# airbyte-dagster

./: Docker  docker-compose  pyproject.toml
app/: README.md  setup.py  workspace.yaml
app/app/: __init__.py  repository.py
app/app/jobs/: say_hello.py
app/app/schedules/: my_hourly_schedule.py
app/app/sensors/: my_sensor.py
app/app_tests/test_graphs/: test_say_hello.py
app/app_tests/test_ops/: test_hello.py
